<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/movie_poster"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_title_text"
                android:textStyle="bold"
                android:hint="@string/movie_title_hint"/>

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_info_text"
                android:hint="@string/movie_year_hint"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:textStyle="bold"
            android:text="@string/movie_synopsis"/>

        <TextView
            android:id="@+id/movie_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_info_text"
            android:hint="@string/movie_synopsis_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:textStyle="bold"
            android:text="@string/movie_rating_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/audience_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/rating_text"
                android:hint="@string/movie_rating_hint"/>

            <TextView
                android:id="@+id/critics_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/rating_text"
                android:hint="@string/movie_rating_hint"/>
        </LinearLayout>

        <TextView
            android:id="@+id/movie_cast_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:textStyle="bold"
            android:text="@string/movie_cast"/>

        <LinearLayout
            android:id="@+id/movie_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/movie_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:textStyle="bold"
            android:textSize="@dimen/detail_info_text"
            android:text="@string/movie_link"/>

    </LinearLayout>
</ScrollView>